--- a/app.json
+++ b/app.json
@@ -1,15 +1,46 @@
 {
+  
   "pages": [
-    "pages/index/index",
-    "pages/logs/logs",
-    "pages/study/study",
-    "pages/voice/voice"
+    "pages/home/home",
+    "pages/sign/sign",
+    "pages/camp/camp",
+    "pages/Setup/Setup",
+    "pages/more/more"
   ],
   "window": {
     "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "#0f0f00",
-    "navigationBarTitleText": "日语随时学",
+    "navigationBarBackgroundColor": "#1aa7db",
+    "navigationBarTitleText": "英协morning打卡",
     "navigationBarTextStyle": "white"
+   
   },
+  "tabBar": {
+    "color": "#a9b7b7",
+    "selectedColor": "#0477c8",
+    "borderStyle": "black",
+    "list": [
+      {
+        "pagePath": "pages/home/home",
+        "text": "首页",
+        "iconPath":"images/home.png",
+        "selectedIconPath":"images/home (1).png"
+      },
+      
+      {
+        "pagePath": "pages/Setup/Setup",
+        "text": "个人中心",
+        "iconPath": "images/me.png",
+        "selectedIconPath": "images/me(1).png"
+      },
+
+      {
+        "pagePath": "pages/more/more",
+        "text": "更多",
+        "iconPath": "images/more.png",
+        "selectedIconPath": "images/more(1).png"
+      }
+    ]
+  },
+ 
   "sitemapLocation": "sitemap.json"
 }
