--- a/app.json
+++ b/app.json
@@ -1,46 +1,13 @@
 {
-  
   "pages": [
-    "pages/home/home",
-    "pages/sign/sign",
-    "pages/camp/camp",
-    "pages/Setup/Setup",
-    "pages/more/more"
+    "pages/index/index",
+    "pages/logs/logs"
   ],
   "window": {
     "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "#1aa7db",
-    "navigationBarTitleText": "英协morning打卡",
-    "navigationBarTextStyle": "white"
-   
+    "navigationBarBackgroundColor": "#fff",
+    "navigationBarTitleText": "WeChat",
+    "navigationBarTextStyle": "black"
   },
-  "tabBar": {
-    "color": "#a9b7b7",
-    "selectedColor": "#0477c8",
-    "borderStyle": "black",
-    "list": [
-      {
-        "pagePath": "pages/home/home",
-        "text": "首页",
-        "iconPath":"images/home.png",
-        "selectedIconPath":"images/home (1).png"
-      },
-      
-      {
-        "pagePath": "pages/Setup/Setup",
-        "text": "个人中心",
-        "iconPath": "images/me.png",
-        "selectedIconPath": "images/me(1).png"
-      },
-
-      {
-        "pagePath": "pages/more/more",
-        "text": "更多",
-        "iconPath": "images/more.png",
-        "selectedIconPath": "images/more(1).png"
-      }
-    ]
-  },
- 
   "sitemapLocation": "sitemap.json"
 }
