--- a/project.config.json
+++ b/project.config.json
@@ -13,8 +13,8 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.6.6",
-	"appid": "wx0131f9fcfbe4e7d6",
-	"projectname": "miniprogram-test-3",
+	"appid": "wx67d0b99fe22fe41f",
+	"projectname": "YingXieMorning",
 	"debugOptions": {
 		"hidedInDevtools": []
 	},
