可点击日历日期看到往期文章

--- a/app.json
+++ b/app.json
@@ -8,7 +8,8 @@
     "pages/more/more",
     "pages/cet4/cet4",
     "pages/cet6/cet6",
-    "pages/info/info"
+    "pages/info/info",
+    "pages/article/article"
   ],
   "window": {
     "backgroundTextStyle": "light",
